bk_ida/bzip2ida/g3/BZ2_hbMakeCodeLengths
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbMakeCodeLengths/src/huffman.c:671:44: error: use of undeclared identifier 'xmmword_41A6B0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41A6B0); 
                                           ^
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbMakeCodeLengths/src/huffman.c:679:27: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v9 = _mm_cmpeq_epi32( v7, ( __m128i)0LL); 
                          ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbMakeCodeLengths/src/huffman.c:690:42: error: use of undeclared identifier 'xmmword_41A6C0'
v18 = _mm_load_si128( ( const __m128i *)&xmmword_41A6C0); 
                                         ^
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbMakeCodeLengths/src/huffman.c:894:9: error: read-only variable is not assignable
v60[-1] = _mm_slli_epi32( 
~~~~~~~ ^
4 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbMakeCodeLengths/src/obj/huffman.o] Error 1
